[tool.poetry]
name = "trantran"
version = "0.1.0"
description = "A language TRANslator based on TRANsformer neural networks."
authors = ["Rafael Xavier <rxaviermontero@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
transformers = "^4.20.1"
torch = "^1.12.0"
sentencepiece = "^0.1.96"
sacremoses = "^0.0.53"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
